# CastingBar

./: CMakeLists.txt  CMakePresets.json  LICENSE  MagicState.h  README.md  vcpkg.json
src/: Actions.h  CastingBar.cpp  CastingBar.h  EventHandler.cpp  EventHandler.h  Events.cpp  Events.h  Main.cpp  PCH.h  Settings.cpp  Settings.h  StateController.cpp  StateController.h
src/Hooks/: PlayerCharacter.cpp  PlayerCharacter.h
src/States/: DefaultState.cpp  DefaultState.h  IState.h  LeftMagicState.cpp  LeftMagicState.h  MagicState.cpp  MagicState.h  RangedState.cpp  RangedState.h  RightMagicState.cpp  RightMagicState.h  VoiceState.cpp  VoiceState.h
